virtual-machines/wan_border_router/iptables
# adapted from http://arstechnica.com/gadgets/2016/04/the-ars-guide-to-building-a-linux-router-from-scratch/

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# #eth2 is WAN interface, eth1 is DMZ interface
-A POSTROUTING -o eth2 -j MASQUERADE
# eth0 is host network interface
-A POSTROUTING -o eth0 -j MASQUERADE

# NAT pinhole: SSH from WAN to LAN
-A PREROUTING -p tcp -m tcp -i eth2 --dport 22 -j DNAT --to-destination 172.16.0.4:22

# NAT pinhole: HTTPS from WAN to LAN
-A PREROUTING -p tcp -m tcp -i eth2 --dport 443 -j DNAT --to-destination 172.16.0.4:8443

# NAT pinhole: HTTP from WAN to LAN
-A PREROUTING -p tcp -m tcp -i eth2 --dport 80 -j DNAT --to-destination 172.16.0.4:8080

COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Service rules
# Accept loopback
-A INPUT -i lo -j ACCEPT
# Allow ssh
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
# Allow HTTPS
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
# Allow HTTP
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT

# TESTING Allow existing and initiated connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Drop rest
-A INPUT -j DROP

# Forwarding rules

# forward packets along established/related connections
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# forward from DMZ (eth1) to WAN (eth2)
-A FORWARD -i eth1 -o eth2 -j ACCEPT
# forward from DMZ (eth1) to host network (eth0)
-A FORWARD -i eth1 -o eth0 -j ACCEPT

# allow traffic from our NAT pinholes
-A FORWARD -p tcp -d 172.16.0.4 --dport 22 -j ACCEPT
-A FORWARD -p tcp -d 172.16.0.4 --dport 8443 -j ACCEPT
-A FORWARD -p tcp -d 172.16.0.4 --dport 8080 -j ACCEPT

# drop all other forwarded traffic
-A FORWARD -j DROP

COMMIT
